--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "deploy": "gh-pages -d dist",
     "predeploy": "pnpm run build",
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --base=/client-fundacion-formar-web/",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
