--- a/package.json
+++ b/package.json
@@ -20,13 +20,18 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.14.2",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/utils": "^5.14.7",
+    "@mui/x-data-grid": "^6.12.1",
     "aos": "^2.3.4",
+    "axios": "^1.5.0",
+    "cors": "^2.8.5",
     "pnpm": "^8.6.10",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "styled-components": "^6.0.5",
+    "sweetalert2": "^11.7.27",
     "swiper": "^10.2.0"
   },
   "devDependencies": {
