--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "aos": "^2.3.4",
     "axios": "^1.5.0",
     "cors": "^2.8.5",
+    "formik": "^2.4.4",
     "pnpm": "^8.6.10",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -32,7 +33,8 @@
     "react-router-dom": "^6.14.2",
     "styled-components": "^6.0.5",
     "sweetalert2": "^11.7.27",
-    "swiper": "^10.2.0"
+    "swiper": "^10.2.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.17",
