--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "aos": "^2.3.4",
     "axios": "^1.5.0",
     "cors": "^2.8.5",
+    "formik": "^2.4.5",
     "pnpm": "^8.6.10",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "styled-components": "^6.0.5",
-    "swiper": "^10.2.0"
+    "swiper": "^10.2.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.17",
