--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/x-data-grid": "^6.12.1",
     "aos": "^2.3.4",
     "axios": "^1.5.0",
+    "boostrap": "^2.0.0",
     "cors": "^2.8.5",
     "formik": "^2.4.4",
     "pnpm": "^8.6.10",
