--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "boostrap": "^2.0.0",
     "cors": "^2.8.5",
     "formik": "^2.4.4",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "pnpm": "^8.6.10",
     "prop-types": "^15.8.1",
