--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_BASE_API_URL="http://localhost:3000/api/"
-VITE_BASE_URL="http://localhost:3000/"
+VITE_BASE_API_URL="https://api.fundacionformar.ar/api/"
+VITE_BASE_URL="https://api.fundacionformar.ar"
 VITE_BASE_IMG_ENTERPRISE_API_URL="/images/imagesEnterprises"
