--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite", 
-    "build": "vite build", 
+    "dev": "vite",
+    "build": "vite build",
     "serve": "vite preview",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
@@ -32,6 +32,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^3.0.0",
     "react-router-dom": "^6.14.2",
     "styled-components": "^6.0.5",
     "sweetalert2": "^11.9.0",
